crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_invalid_wrong_test.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "format!(\"--- before\\n{}\\n--- after\\n{}\\n--- errors\\n{left:?}\\n{right:?}\",\npretty(before), pretty(after))"
---
--- before
let data#6 : Data = listData (con (list data) [(I 42)]) in
case@Data data#6 of
  DataList payload#5 -> 42
  True -> 0
--- after
let data#6 : Data = listData (con (list data) [(I 42)]) in
case@Data data#6 of
  DataList payload#5 -> 42
  True -> 0
--- errors
InvalidCase("non-Data test")
InvalidCase("non-Data test")
