crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_other_empty_used_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (con (list (pair data data)) []) of
  DataList payload#1 -> (con (list data) [])
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_2
    (force
      [[[[[[(force (builtin chooseData)) generated_2] (delay (error))] (delay (error))]
        (delay (con (list data) []))]
        (delay (error))]
        (delay (error))]))
    [(builtin listData) (con (list (pair data data)) [])]])
--- optimized Core
let anf#3 : Data = listData (con (list (pair data data)) []) in
(con (list data) [])
--- optimized UPLC
(program 1.1.0
  [(lam anf_1 (con (list data) []))
    [(builtin listData) (con (list (pair data data)) [])]])
--- isolated pass
--- isolated ANF input
let anf#2 : Data = listData (con (list (pair data data)) []) in
case@Data anf#2 of
  DataList payload#1 -> (con (list data) [])
--- isolated folded Core
let data_operand#3 : list (pair Data Data) = (con (list (pair data data)) []) in
let anf#2 : Data = listData data_operand#3 in
let payload#1 : list Data = data_operand#3 in
(con (list data) [])
--- isolated cleaned Core
let anf#2 : Data = listData (con (list (pair data data)) []) in
(con (list data) [])
--- isolated UPLC before
(program 1.1.0
  [(lam anf_2
    [(lam generated_3
      (force
        [[[[[[(force (builtin chooseData)) generated_3] (delay (error))] (delay (error))]
          (delay (con (list data) []))]
          (delay (error))]
          (delay (error))]))
      anf_2])
    [(builtin listData) (con (list (pair data data)) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_2 (con (list data) []))
    [(builtin listData) (con (list (pair data data)) [])]])
--- result
error: Runtime(TypeMismatch(Data, ProtoList(Pair(Data, Data), [])))
--- logs
[]
