crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_other_empty_used_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (con (list (pair data data)) []) of
  DataList payload#4 -> payload#4
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_5
    (force
      [[[[[[(force (builtin chooseData)) generated_5] (delay (error))] (delay (error))]
        (delay [(lam payload_4 payload_4) [(builtin unListData) generated_5]])]
        (delay (error))]
        (delay (error))]))
    [(builtin listData) (con (list (pair data data)) [])]])
--- optimized Core
let anf#2 : Data = listData (con (list (pair data data)) []) in
case@Data anf#2 of
  DataList payload#1 -> payload#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam anf_3
      [(lam generated_5
        (force
          [[[[[[builtin_6 generated_5] (delay (error))] (delay (error))]
            (delay [(lam payload_4 payload_4) [(builtin unListData) generated_5]])]
            (delay (error))]
            (delay (error))]))
        anf_3])
      [(builtin listData) (con (list (pair data data)) [])]])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#5 : Data = listData (con (list (pair data data)) []) in
case@Data anf#5 of
  DataList payload#4 -> payload#4
--- isolated folded Core
let data_operand#6 : list (pair Data Data) = (con (list (pair data data)) []) in
let anf#5 : Data = listData data_operand#6 in
let payload#4 : list Data = data_operand#6 in
payload#4
--- isolated cleaned Core
let data_operand#6 : list (pair Data Data) = (con (list (pair data data)) []) in
let anf#5 : Data = listData data_operand#6 in
data_operand#6
--- isolated UPLC before
(program 1.1.0
  [(lam anf_5
    [(lam generated_6
      (force
        [[[[[[(force (builtin chooseData)) generated_6] (delay (error))] (delay (error))]
          (delay [(lam payload_4 payload_4) [(builtin unListData) generated_6]])]
          (delay (error))]
          (delay (error))]))
      anf_5])
    [(builtin listData) (con (list (pair data data)) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam data_operand_6
    [(lam anf_5 data_operand_6) [(builtin listData) data_operand_6]])
    (con (list (pair data data)) [])])
--- result
error: Runtime(TypeMismatch(Data, ProtoList(Pair(Data, Data), [])))
--- logs
[]
