crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_other_items_used_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (con (list (pair data data)) [((I 42), (I 42))]) of
  DataList payload#7 -> (con (list data) [])
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_8
    (force
      [[[[[[(force (builtin chooseData)) generated_8] (delay (error))] (delay (error))]
        (delay (con (list data) []))]
        (delay (error))]
        (delay (error))]))
    [(builtin listData) (con (list (pair data data)) [((I 42), (I 42))])]])
--- optimized Core
let anf#2 : Data = listData (con (list (pair data data)) [((I 42), (I 42))]) in
(con (list data) [])
--- optimized UPLC
(program 1.1.0
  [(lam anf_1 (con (list data) []))
    [(builtin listData) (con (list (pair data data)) [((I 42), (I 42))])]])
--- isolated pass
--- isolated ANF input
let anf#8 : Data = listData (con (list (pair data data)) [((I 42), (I 42))]) in
case@Data anf#8 of
  DataList payload#7 -> (con (list data) [])
--- isolated folded Core
let data_operand#9 : list (pair Data Data) = (con (list (pair data data)) [((I 42), (I 42))]) in
let anf#8 : Data = listData data_operand#9 in
let payload#7 : list Data = data_operand#9 in
(con (list data) [])
--- isolated cleaned Core
let anf#8 : Data = listData (con (list (pair data data)) [((I 42), (I 42))]) in
(con (list data) [])
--- isolated UPLC before
(program 1.1.0
  [(lam anf_8
    [(lam generated_9
      (force
        [[[[[[(force (builtin chooseData)) generated_9] (delay (error))] (delay (error))]
          (delay (con (list data) []))]
          (delay (error))]
          (delay (error))]))
      anf_8])
    [(builtin listData) (con (list (pair data data)) [((I 42), (I 42))])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_8 (con (list data) []))
    [(builtin listData) (con (list (pair data data)) [((I 42), (I 42))])]])
--- result
error: Runtime(TypeMismatch(Data, ProtoList(Pair(Data, Data), [ProtoPair(Data, Data, Data(Integer(42)), Data(Integer(42)))])))
--- logs
[]
