crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_other_items_used_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (con (list (pair data data)) [((I 42), (I 42))]) of
  DataList payload#10 -> payload#10
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_11
    (force
      [[[[[[(force (builtin chooseData)) generated_11] (delay (error))] (delay (error))]
        (delay [(lam payload_10 payload_10) [(builtin unListData) generated_11]])]
        (delay (error))]
        (delay (error))]))
    [(builtin listData) (con (list (pair data data)) [((I 42), (I 42))])]])
--- optimized Core
let data_operand#3 : list (pair Data Data) = (con (list (pair data data)) [((I 42), (I 42))]) in
let anf#2 : Data = listData data_operand#3 in
data_operand#3
--- optimized UPLC
(program 1.1.0
  [(lam data_operand_1
    [(lam anf_4 data_operand_1) [(builtin listData) data_operand_1]])
    (con (list (pair data data)) [((I 42), (I 42))])])
--- isolated pass
--- isolated ANF input
let anf#11 : Data = listData (con (list (pair data data)) [((I 42), (I 42))]) in
case@Data anf#11 of
  DataList payload#10 -> payload#10
--- isolated folded Core
let data_operand#12 : list (pair Data Data) = (con (list (pair data data)) [((I 42), (I 42))]) in
let anf#11 : Data = listData data_operand#12 in
let payload#10 : list Data = data_operand#12 in
payload#10
--- isolated cleaned Core
let data_operand#12 : list (pair Data Data) = (con (list (pair data data)) [((I 42), (I 42))]) in
let anf#11 : Data = listData data_operand#12 in
data_operand#12
--- isolated UPLC before
(program 1.1.0
  [(lam anf_11
    [(lam generated_12
      (force
        [[[[[[(force (builtin chooseData)) generated_12] (delay (error))] (delay (error))]
          (delay [(lam payload_10 payload_10) [(builtin unListData) generated_12]])]
          (delay (error))]
          (delay (error))]))
      anf_11])
    [(builtin listData) (con (list (pair data data)) [((I 42), (I 42))])]])
--- isolated UPLC after
(program 1.1.0
  [(lam data_operand_12
    [(lam anf_11 data_operand_12) [(builtin listData) data_operand_12]])
    (con (list (pair data data)) [((I 42), (I 42))])])
--- result
error: Runtime(TypeMismatch(Data, ProtoList(Pair(Data, Data), [ProtoPair(Data, Data, Data(Integer(42)), Data(Integer(42)))])))
--- logs
[]
