crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_overapplied.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (con (list data) [(I 42)]) 0 of
  DataList payload#9 -> payload#9
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_10
    (force
      [[[[[[(force (builtin chooseData)) generated_10] (delay (error))] (delay (error))]
        (delay [(lam payload_9 payload_9) [(builtin unListData) generated_10]])]
        (delay (error))]
        (delay (error))]))
    [[(builtin listData) (con (list data) [(I 42)])] (con integer 0)]])
--- optimized Core
let anf#3 : Data = (con data (List [I 42])) 0 in
case@Data anf#3 of
  DataList payload#1 -> payload#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam anf_2
      [(lam generated_5
        (force
          (case
            (constr 0
              generated_5
              (delay (error))
              (delay (error))
              (delay [(builtin unListData) generated_5])
              (delay (error))
              (delay (error)))
            builtin_6)))
        anf_2])
      [(con data (List [I 42])) (con integer 0)]])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#10 : Data = listData (con (list data) [(I 42)]) in
let anf#11 : Data = anf#10 0 in
case@Data anf#11 of
  DataList payload#9 -> payload#9
--- isolated folded Core
let anf#10 : Data = listData (con (list data) [(I 42)]) in
let anf#11 : Data = anf#10 0 in
case@Data anf#11 of
  DataList payload#9 -> payload#9
--- isolated cleaned Core
let anf#10 : Data = listData (con (list data) [(I 42)]) in
let anf#11 : Data = anf#10 0 in
case@Data anf#11 of
  DataList payload#9 -> payload#9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_10
    [(lam anf_11
      [(lam generated_12
        (force
          [[[[[[(force (builtin chooseData)) generated_12] (delay (error))] (delay (error))]
            (delay [(lam payload_9 payload_9) [(builtin unListData) generated_12]])]
            (delay (error))]
            (delay (error))]))
        anf_11])
      [anf_10 (con integer 0)]])
    [(builtin listData) (con (list data) [(I 42)])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_10
    [(lam anf_11
      [(lam generated_12
        (force
          [[[[[[(force (builtin chooseData)) generated_12] (delay (error))] (delay (error))]
            (delay [(lam payload_9 payload_9) [(builtin unListData) generated_12]])]
            (delay (error))]
            (delay (error))]))
        anf_11])
      [anf_10 (con integer 0)]])
    [(builtin listData) (con (list data) [(I 42)])]])
--- result
error: NonFunctionApplication(Con(Integer(0)), Con(Data(List([Integer(42)]))))
--- logs
[]
