crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_parameter_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data listData (con (list data) [(I 42)]) of
  DataList payload#16 -> payload#16
  _ -> trace "cold" in error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_17
    (force
      [[[[[[(force (builtin chooseData)) generated_17]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay [(lam payload_16 payload_16) [(builtin unListData) generated_17]])]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
        (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
    [(builtin listData) (con (list data) [(I 42)])]])
--- optimized Core
(con (list data) [(I 42)])
--- optimized UPLC
(program 1.1.0 (con (list data) [(I 42)]))
--- isolated pass
--- isolated ANF input
let anf#17 : Data = listData (con (list data) [(I 42)]) in
case@Data anf#17 of
  DataList payload#16 -> payload#16
  _ -> trace "cold" in error
--- isolated folded Core
let data_operand#18 : list Data = (con (list data) [(I 42)]) in
let anf#17 : Data = listData data_operand#18 in
let payload#16 : list Data = data_operand#18 in
payload#16
--- isolated cleaned Core
let data_operand#18 : list Data = (con (list data) [(I 42)]) in
let anf#17 : Data = listData data_operand#18 in
data_operand#18
--- isolated UPLC before
(program 1.1.0
  [(lam anf_17
    [(lam generated_18
      (force
        [[[[[[(force (builtin chooseData)) generated_18]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
          (delay [(lam payload_16 payload_16) [(builtin unListData) generated_18]])]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
      anf_17])
    [(builtin listData) (con (list data) [(I 42)])]])
--- isolated UPLC after
(program 1.1.0
  [(lam data_operand_18
    [(lam anf_17 data_operand_18) [(builtin listData) data_operand_18]])
    (con (list data) [(I 42)])])
--- result
(con (list data) [(I 42)])
--- logs
[]
