crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__list_parameter_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
(\input#19 : list Data -> case@Data listData input#19 of
  DataList payload#20 -> payload#20
  _ -> trace "cold" in error) (con (list data) [(I 42)])
--- unoptimized UPLC
(program 1.1.0
  [(lam input_19
    [(lam generated_21
      (force
        [[[[[[(force (builtin chooseData)) generated_21]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
          (delay [(lam payload_20 payload_20) [(builtin unListData) generated_21]])]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
          (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
      [(builtin listData) input_19]])
    (con (list data) [(I 42)])])
--- optimized Core
let data_operand#4 : list Data = (con (list data) [(I 42)]) in
let anf#3 : Data = listData data_operand#4 in
data_operand#4
--- optimized UPLC
(program 1.1.0
  [(lam data_operand_1
    [(lam anf_2 data_operand_1) [(builtin listData) data_operand_1]])
    (con (list data) [(I 42)])])
--- isolated pass
--- isolated ANF input
(\input#19 : list Data -> let anf#21 : Data = listData input#19 in
case@Data anf#21 of
  DataList payload#20 -> payload#20
  _ -> trace "cold" in error) (con (list data) [(I 42)])
--- isolated folded Core
(\input#19 : list Data -> let anf#21 : Data = listData input#19 in
let payload#20 : list Data = input#19 in
payload#20) (con (list data) [(I 42)])
--- isolated cleaned Core
let input#19 : list Data = (con (list data) [(I 42)]) in
let anf#21 : Data = listData input#19 in
input#19
--- isolated UPLC before
(program 1.1.0
  [(lam input_19
    [(lam anf_21
      [(lam generated_22
        (force
          [[[[[[(force (builtin chooseData)) generated_22]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay [(lam payload_20 payload_20) [(builtin unListData) generated_22]])]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]
            (delay (force [[(force (builtin trace)) (con string "cold")] (delay (error))]))]))
        anf_21])
      [(builtin listData) input_19]])
    (con (list data) [(I 42)])])
--- isolated UPLC after
(program 1.1.0
  [(lam input_19 [(lam anf_21 input_19) [(builtin listData) input_19]])
    (con (list data) [(I 42)])])
--- result
(con (list data) [(I 42)])
--- logs
[]
